Added Open Street Map to list of base map layer options.

--- a/explore/index.html
+++ b/explore/index.html
@@ -310,7 +310,13 @@
             var labMap = new LabLeafletMap({
                 title: 'Explore',
                 about: 'Discover the different geographies within Trafford by choosing a layer and then selecting an area.',
-                filterGUI: datasetSelect
+                filterGUI: datasetSelect,
+                baseLayers: {
+                    "Light": labCreateTileLayer("CartoDB.Positron"),
+                    "Satellite": labCreateTileLayer("Esri.WorldImagery"),
+                    "Street": labCreateTileLayer("OpenStreetMap.Mapnik"),
+                    "None": labCreateTileLayer(null)
+                }
             });
 
             labMap.overlayData = null;  // object to store overlay data
