Added school datasets and renamed base layers to match those in Plotter.

--- a/explore/index.html
+++ b/explore/index.html
@@ -258,6 +258,14 @@
 
                 { name: 'Defibrillators', url: baseUrl + '?title=Defibrillators&about=Defibrillator%20locations%20within%20Trafford.%20Please%20note%20that%20there%20may%20be%20restrictions%20on%20access%20and%20availability%20and%20locations%20are%20approximate.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2fdefibrillators%2ftrafford_defibrillators.csv%22%20target%3d%22_blank%22%3eCSV%3c%2fa%3e%20%7c%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2fdefibrillators%2ftrafford_defibrillators.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2fdefibrillators%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Trafford%20Council&data=https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.geojson' },
 
+                { name: 'Education: Further education colleges', url: baseUrl + '?title=Further%20education%20colleges&about=Further%20education%20colleges%20in%20Trafford%20from%20OS%20OpenMap%20-%20Local.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2feducation%2ffurther%2ftrafford_further_education.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2feducation%2ffurther%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Ordnance%20Survey&data=https://www.trafforddatalab.io/open_data/education/further/trafford_further_education_styled.geojson' },
+
+                { name: 'Education: Primary schools', url: baseUrl + '?title=Primary%20schools&about=Primary%20schools%20in%20Trafford%20from%20OS%20OpenMap%20-%20Local.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2feducation%2fprimary%2ftrafford_primary_schools.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2feducation%2fprimary%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Ordnance%20Survey&data=https://www.trafforddatalab.io/open_data/education/primary/trafford_primary_schools_styled.geojson' },
+
+                { name: 'Education: Secondary schools', url: baseUrl + '?title=Secondary%20schools&about=Secondary%20schools%20in%20Trafford%20from%20OS%20OpenMap%20-%20Local.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2feducation%2fsecondary%2ftrafford_secondary_schools.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2feducation%2fsecondary%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Ordnance%20Survey&data=https://www.trafforddatalab.io/open_data/education/secondary/trafford_secondary_schools_styled.geojson' },
+
+                { name: 'Education: Special schools', url: baseUrl + '?title=Special%20schools&about=Special%20schools%20in%20Trafford%20from%20OS%20OpenMap%20-%20Local.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2feducation%2fspecial%2ftrafford_special_schools.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2feducation%2fspecial%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Ordnance%20Survey&data=https://www.trafforddatalab.io/open_data/education/special/trafford_special_schools_styled.geojson' },
+
                 { name: 'Flood risk', url: baseUrl + '?title=Flood%20risk&about=The%20dataset%20shows%20the%20chance%20of%20flooding%20from%20rivers%20and%2for%20the%20sea%2c%20based%20on%2050m%20cells%20in%20Trafford.%20Each%20cell%20is%20allocated%20to%20one%20of%20four%20flood%20risk%20categories%2c%20taking%20into%20account%20flood%20defences%20and%20their%20condition.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2fflood_risk%2ftrafford_flood_risk.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2fflood_risk%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=Environment%20Agency&data=https://www.trafforddatalab.io/open_data/flood_risk/trafford_flood_risk_styled.geojson' },
 
                 { name: 'Food banks', url: baseUrl + '?title=Food%20banks&about=Location%20of%20food%20banks%2c%20pantries%20and%20food%20clubs%20across%20Trafford.%3cbr%20%2f%3e%3cbr%20%2f%3eDownload%3a%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2ffood_banks%2ftrafford_food_banks.csv%22%20target%3d%22_blank%22%3eCSV%3c%2fa%3e%20%7c%20%3ca%20href%3d%22https%3a%2f%2fwww.trafforddatalab.io%2fopen_data%2ffood_banks%2ftrafford_food_banks.geojson%22%20target%3d%22_blank%22%3eGeoJSON%3c%2fa%3e.%3cbr%20%2f%3eFurther%20resources%20available%20%3ca%20href%3d%22https%3a%2f%2fgithub.com%2ftraffordDataLab%2fopen_data%2ftree%2fmaster%2ffood_banks%22%20target%3d%22_blank%22%3eon%20GitHub%3c%2fa%3e.&attr=GM%20Poverty%20Action&data=https://www.trafforddatalab.io/open_data/food_banks/trafford_food_banks.geojson' },
@@ -313,8 +321,8 @@
                 filterGUI: datasetSelect,
                 baseLayers: {
                     "Aerial": labCreateTileLayer("Esri.WorldImagery"),
-                    "Detailed": labCreateTileLayer("OpenStreetMap.Mapnik"),
-                    "Light": labCreateTileLayer("CartoDB.Positron"),
+                    "High detail": labCreateTileLayer("OpenStreetMap.Mapnik"),
+                    "Low detail": labCreateTileLayer("CartoDB.Positron"),
                     "None": labCreateTileLayer(null)
                 }
             });
@@ -322,7 +330,7 @@
             labMap.overlayData = null;  // object to store overlay data
             if (queryUrl !== '' && queryUrl !== null) loadOverlayData(queryUrl); // any external data to load?
 
-            labMap.baseLayers['Light'].addTo(labMap.map);   // Choose the base/tile layer for the map
+            labMap.baseLayers['Low detail'].addTo(labMap.map);   // Choose the base/tile layer for the map
 
             labMap.featureCache = null;    // for caching the feature currently selected
 
