Updated the baselayers call to fit in with the new definition in the template.

--- a/defibrillators/index.html
+++ b/defibrillators/index.html
@@ -115,7 +115,7 @@
             }));
 
             // Choose the base/tile layer for the map
-            defibMap.baseLayers['Light'].addTo(defibMap.map);
+            defibMap.baseLayers['Low detail'].addTo(defibMap.map);
 
             // Add the Trafford boundary
             labAjax('https://www.trafforddatalab.io/spatial_data/local_authority/2016/trafford_local_authority_full_resolution.geojson', function (data) {
