--- a/greenspace/index.html
+++ b/greenspace/index.html
@@ -159,7 +159,7 @@
 
             labMap.featureCache = null; // to store the currently selected feature
             labMap.attributionGreenspace = 'Greenspaces data provided by <a href="https://www.ordnancesurvey.co.uk/getoutside/greenspaces/" target="_blank">OS Greenspace</a>';
-            labMap.baseLayers['Light'].addTo(labMap.map);
+            labMap.baseLayers['Low detail'].addTo(labMap.map);
 
             // object to hold toggle state for the greenspace categories
             labMap.greenspaceCategories = {
